--- a/views/challenges.ejs
+++ b/views/challenges.ejs
@@ -236,7 +236,7 @@
           <%= challenge.title %>
         </h2>
         <p class="points">
-          <%= challenge.points %> aura
+          <%= challenge.points %> puntos
         </p>
       </div>
       <p>
@@ -251,7 +251,7 @@
             Completado
           </button>
         </form>
-        <% } else if (loggedUser.id == "66c0ab2fa2465cc92d0e735c" || loggedUser.id == "66c0ac03bf25a5a4e2153849") { %>
+        <% } else if (loggedUser.id == "66d300a6a3f8683c9a0b5c76" || loggedUser.id == "66d3002ea3f8683c9a0b5c6e") { %>
         <form class="delete-challenge-form">
           <input type="hidden" name="challengeId" value="<%= challenge._id %>">
           <button type="submit" class="delete-challenge-button">
@@ -269,7 +269,7 @@
           <%= challenge.title %>
         </h2>
         <p class="points">
-          <%= challenge.points %> aura
+          <%= challenge.points %> puntos
         </p>
       </div>
       <p>
@@ -284,7 +284,7 @@
             Ya solicitado
           </button>
         </form>
-        <% } else if (loggedUser.id == "66c0ab2fa2465cc92d0e735c" || loggedUser.id == "66c0ac03bf25a5a4e2153849") { %>
+        <% } else if (loggedUser.id == "66d300a6a3f8683c9a0b5c76" || loggedUser.id == "66d3002ea3f8683c9a0b5c6e") { %>
         <form class="delete-challenge-form">
           <input type="hidden" name="challengeId" value="<%= challenge._id %>">
           <button type="submit" class="delete-challenge-button">
@@ -302,7 +302,7 @@
           <%= challenge.title %>
         </h2>
         <p class="points">
-          <%= challenge.points %> aura
+          <%= challenge.points %> puntos
         </p>
       </div>
       <p>
@@ -317,7 +317,7 @@
             Solicitar
           </button>
         </form>
-        <% } else if (loggedUser.id == "66c0ab2fa2465cc92d0e735c" || loggedUser.id == "66c0ac03bf25a5a4e2153849") { %>
+        <% } else if (loggedUser.id == "66d300a6a3f8683c9a0b5c76" || loggedUser.id == "66d3002ea3f8683c9a0b5c6e") { %>
         <form class="delete-challenge-form">
           <input type="hidden" name="challengeId" value="<%= challenge._id %>">
           <button type="submit" class="delete-challenge-button">
@@ -381,7 +381,7 @@
     })
   </script>
   <% } %>
-  <% if (loggedUser.id == "66c0ab2fa2465cc92d0e735c" || loggedUser.id == "66c0ac03bf25a5a4e2153849") { %>
+  <% if (loggedUser.id == "66d300a6a3f8683c9a0b5c76" || loggedUser.id == "66d3002ea3f8683c9a0b5c6e") { %>
   <script>
     const deleteChallengeForms = $$('.delete-challenge-form')
 
