--- a/views/challenges.ejs
+++ b/views/challenges.ejs
@@ -36,7 +36,7 @@
     }
 
     .challenge-card {
-      flex: 1 1 33%;
+      flex: 1 1 50%;
       padding: .85rem;
       background-color: #f1f1f1;
       max-width: 500px;
@@ -81,7 +81,7 @@
     }
 
     .challenge-card h2 {
-      max-width: 75%;
+      max-width: 70%;
     }
 
     .challenge-card .request-challenge-button {
@@ -204,8 +204,11 @@
       .challenge-card {
         max-width: 100%;
       }
-    }
 
+      .challenge-card h2 {
+        max-width: 50%;
+      }
+    }
   </style>
 </head>
 
