feat: user return page button responsive

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -160,6 +160,17 @@
       text-decoration: none;
       color: inherit;
     }
+
+    @media (max-width: 600px) {
+      .return-page {
+        top: 0rem;
+        left: 0rem;
+        border-radius: 0;
+        border-bottom-right-radius: 8px;
+        border-top: none;
+        border-left: none;
+      }
+    }
   </style>
 </head>
 
