--- a/views/user.ejs
+++ b/views/user.ejs
@@ -146,9 +146,7 @@
       height: 35px;
       color: #333;
       border: 1px solid #b3b3b3;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      
       transition: background-color 0.2s;
     }
 
@@ -156,10 +154,26 @@
       background-color: #d5d5d5;
     }
 
-    .become-administrator {
+    .return-page a {
+      width: 100%;
+      height: 100%;
+      /* background-color: red; */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+
+    .bottom-left-buttons {
       position: fixed;
       bottom: 1rem;
       left: 1rem;
+      display: flex;
+      gap: 1rem;
+    }
+
+    .become-administrator,
+    .delete-user {
       font-size: 1rem;
       font-weight: bold;
       cursor: pointer;
@@ -174,7 +188,17 @@
       transition: background-color 0.2s;
     }
 
-    .become-administrator:hover {
+    .delete-user {
+      padding: 0;
+      width: 35px;
+      height: 35px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .become-administrator:hover,
+    .delete-user:hover {
       background-color: #d5d5d5;
     }
 
@@ -209,9 +233,14 @@
   </div>
 
   <% if (loggedUser.isSuperAdmin && !userToShow.isAdmin) { %>
-  <button class="become-administrator">
-    Convertir en administrador
-  </button>
+  <div class="bottom-left-buttons">
+    <button class="become-administrator">
+      Convertir en administrador
+    </button>
+    <button class="delete-user">
+      <i class="fa-solid fa-trash"></i>
+    </button>
+  </div>
   <% } %>
 
   <h1>
@@ -330,7 +359,7 @@
             })
         })
       })
-      
+
       $$('.reject-button').forEach(button => {
         button.addEventListener('click', function(event) {
           event.stopPropagation()
@@ -359,26 +388,46 @@
             })
         })
       })
-      
+
       $('.become-administrator').addEventListener('click', function() {
         fetch('/users/become-administrator', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({
-            userId: '<%= userToShow._id %>'
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+              userId: '<%= userToShow._id %>'
+            })
           })
-        })
-        .then(res => res.json())
-        .then(data => {
-          if (data.err) {
-            notify(data.err, 1000)
-          } else {
-            $('.become-administrator').remove()
-            notify('Usuario convertido en administrador correctamente', 1000, 'success')
-          }
-        })
+          .then(res => res.json())
+          .then(data => {
+            if (data.err) {
+              notify(data.err, 1000)
+            } else {
+              $('.become-administrator').remove()
+              notify('Usuario convertido en administrador correctamente', 1000, 'success')
+            }
+          })
+      })
+
+      $('.delete-user').addEventListener('click', function() {
+        fetch('/users/delete-user', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+              userId: '<%= userToShow._id %>'
+            })
+          })
+          .then(res => res.json())
+          .then(data => {
+            if (data.err) {
+              notify(data.err, 1000)
+            } else {
+              window.location.href = '/scoreboard'
+            }
+          })
       })
     })
   </script>
