refactor: admin page

--- a/views/admin-page.ejs
+++ b/views/admin-page.ejs
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Administración - Novatadas Informática</title>
-  <link
-    href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'
-    rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap' rel='stylesheet'>
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
   <link href="/styles/navigation.css" rel="stylesheet" type="text/css">
   <link href="/styles/notify.css" rel="stylesheet" type="text/css">
@@ -252,10 +250,10 @@
           <select type="text" id="users" name="users">
             <option hidden disabled selected value>Selecciona un usuario</option>
             <% allUsers.forEach((user)=> { %>
-              <option title="<%= user.name %>" value="<%= user._id %>">
-                <%= user.name %> - <%= user.dni %>
-              </option>
-              <% }) %>
+            <option title="<%= user.name %>" value="<%= user._id %>">
+              <%= user.name %> - <%= user.dni %>
+            </option>
+            <% }) %>
           </select>
         </div>
         <div>
@@ -268,10 +266,10 @@
           <select type="text" id="challenges" name="challenge">
             <option hidden disabled selected value>Selecciona un reto</option>
             <% allChallenges.forEach((challenge)=> { %>
-              <option title="<%= challenge.description %>" value="<%= challenge._id %>">
-                <%= challenge.title %> - <%= challenge.points %>
-              </option>
-              <% }) %>
+            <option title="<%= challenge.description %>" value="<%= challenge._id %>">
+              <%= challenge.title %> - <%= challenge.points %>
+            </option>
+            <% }) %>
           </select>
         </div>
         <div class="create-button-container">
@@ -281,7 +279,6 @@
     </div>
   </div>
   <script>
-
     const $ = (selector) => document.querySelector(selector)
 
     let allChallenges = []
@@ -289,11 +286,11 @@
 
     window.addEventListener("DOMContentLoaded", () => {
       fetch('/get-db-data', {
-        method: 'GET',
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      })
+          method: 'GET',
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        })
         .then(res => res.json())
         .then((data) => {
           allChallenges = data.challenges
@@ -363,16 +360,16 @@
       if (!userDNI || !userName || !userPassword) return notify('Por favor, rellena todos los campos.', 1000)
 
       fetch('/register', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          dni: userDNI,
-          name: userName,
-          password: userPassword
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            dni: userDNI,
+            name: userName,
+            password: userPassword
+          })
         })
-      })
         .then(res => res.json())
         .then((data) => {
           if (data.err) {
@@ -399,17 +396,17 @@
 
       if (!challengeName || !challengeDescription || !challengePoints) return notify('Por favor, rellena todos los campos.', 1000)
 
-      fetch('/create-challenge', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          title: challengeName,
-          description: challengeDescription,
-          points: challengePoints
+      fetch('/challenges/create-challenge', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            title: challengeName,
+            description: challengeDescription,
+            points: challengePoints
+          })
         })
-      })
         .then(res => res.json())
         .then((data) => {
           if (data.err) {
@@ -435,15 +432,15 @@
 
       if (!userId || !challengeId) return notify('Por favor, rellena todos los campos.', 1000)
       fetch('/add-points', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          userId,
-          challengeId
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            userId,
+            challengeId
+          })
         })
-      })
         .then(res => res.json())
         .then((data) => {
           if (data.err) {
