feat: challenge title when request

--- a/views/challenges.ejs
+++ b/views/challenges.ejs
@@ -375,7 +375,7 @@
               requestCompletedChallengeForm.querySelector('.request-challenge-button').classList.add('pending')
               requestCompletedChallengeForm.querySelector('.request-challenge-button').disabled = true
 
-              notify('Reto solicitado correctamente.', 1000, 'success')
+              notify(`${data.title} - Reto solicitado correctamente.`, 1000, 'success')
             }
           })
 
