--- a/views/scoreboard.ejs
+++ b/views/scoreboard.ejs
@@ -5,9 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marcador - Novatadas Informática</title>
-  <link
-    href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'
-    rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap' rel='stylesheet'>
   <link rel='stylesheet' href='https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css'>
   <link href="/styles/navigation.css" rel="stylesheet" type="text/css">
   <link href="/styles/table.css" rel="stylesheet" type="text/css">
@@ -50,17 +48,18 @@
     }
 
     @keyframes breathe {
-       0% {
-       transform: scale(1);
-       }
-       50% {
-       transform: scale(1.01);
-       }
-       100% {
-       transform: scale(1);
-       }
-    }
+      0% {
+        transform: scale(1);
+      }
 
+      50% {
+        transform: scale(1.01);
+      }
+
+      100% {
+        transform: scale(1);
+      }
+    }
   </style>
 </head>
 
@@ -74,8 +73,11 @@
         <li><a href="/challenges">Retos</a></li>
         <li><a href="/scoreboard" id="a-selected">Marcador</a></li>
         <% if (loggedUser.isAdmin) { %>
-          <li><a href="/admin-page">Admin</a></li>
-          <% } %>
+        <li><a href="/admin-page">Admin</a></li>
+        <% } %>
+        <% if (loggedUser.isSuperAdmin) { %>
+        <li><a href="/super-admin-page">Avanzadas</a></li>
+        <% } %>
       </ul>
     </nav>
   </header>
@@ -89,32 +91,32 @@
           <th>Puntuación</th>
           <th>Retos</th>
           <% if (loggedUser.isAdmin) { %>
-            <th>Retos solicitados</th>
+          <th>Retos solicitados</th>
           <% } %>
         </tr>
       </thead>
       <tbody>
         <% allUsers.forEach((user, index)=> { %>
-          <tr id="<%= user._id %>" class="<%= user._id === loggedUser.id ? 'logged-user-row' : '' %>">
-            <td>
-              <%= index + 1 %>
-            </td>
-            <td>
-              <%= user.name %>
-            </td>
-            <td>
-              <%= user.points %>
-            </td>
-            <td>
-              <%= user.challenges.length %>
-            </td>
-            <% if (loggedUser.isAdmin) { %>
-              <td>
-                <%= user.pendingChallenges.length %>
-              </td>
-            <% } %>
-          </tr>
-          <% }) %>
+        <tr id="<%= user._id %>" class="<%= user._id === loggedUser.id ? 'logged-user-row' : '' %>">
+          <td>
+            <%= index + 1 %>
+          </td>
+          <td>
+            <%= user.name %>
+          </td>
+          <td>
+            <%= user.points %>
+          </td>
+          <td>
+            <%= user.challenges.length %>
+          </td>
+          <% if (loggedUser.isAdmin) { %>
+          <td>
+            <%= user.pendingChallenges.length %>
+          </td>
+          <% } %>
+        </tr>
+        <% }) %>
       </tbody>
     </table>
   </div>
