style: extra points icon admin-page.ejs

--- a/views/admin-page.ejs
+++ b/views/admin-page.ejs
@@ -315,7 +315,7 @@
         </div>
         <div>
           <label for="extra-points" class="input-label">
-            <i class="fa-solid fa-input-text"></i>
+            <i class="fa-solid fa-hundred-points"></i>
             Puntos extra
           </label>
 
