fix: fix number to two decimals

--- a/views/scoreboard.ejs
+++ b/views/scoreboard.ejs
@@ -120,7 +120,7 @@
             <% if (index < 2) { %>
             -
             <% } else { %>
-            <%= user.points / totalPoints * 100 || 0 %>%
+            <%= (user.points / totalPoints * 100).toFixed(2) || 0 %>%
             <% } %>
           </td>
         </tr>
