--- a/public/styles/table.css
+++ b/public/styles/table.css
@@ -50,19 +50,16 @@ tbody tr:nth-child(even) {
   background: rgb(255 255 255 / .8);
 }
 
-tbody tr {
-  cursor: pointer;
-}
-
 @media (max-width: 900px) {
   table {
-    font-size: .6rem;
+    font-size: .55rem;
   }
 
   .table-container {
     margin-top: 1.2rem;
-    max-width: 95vw;
-    max-height: 89.5vh;
+    max-width: 100vw;
+    max-height: 91vh;
+    border-radius: 0;
     padding: 0;
   }
 
